--- a/index.html
+++ b/index.html
@@ -69,6 +69,54 @@
             width: 24px;
             background-color: #14b8a6;
         }
+
+        .float-buttons {
+            z-index: 1000;
+        }
+
+        .contact-button {
+            transition: all 0.3s ease;
+        }
+
+        .contact-button:hover {
+            transform: translateY(-5px);
+        }
+
+        .tooltip {
+            visibility: hidden;
+            opacity: 0;
+            transition: opacity 0.3s ease;
+        }
+
+        .contact-button:hover .tooltip {
+            visibility: visible;
+            opacity: 1;
+        }
+
+        .input-field {
+            background-color: #f0f0f0;
+            border: none;
+            border-radius: 8px;
+        }
+
+        .input-field:focus {
+            outline: none;
+            background-color: #e8e8e8;
+        }
+
+        .radio-button {
+            display: none;
+        }
+
+        .radio-label {
+            background-color: #f0f0f0;
+            transition: all 0.3s ease;
+        }
+
+        .radio-button:checked+.radio-label {
+            background-color: #007514;
+            color: white
+        }
     </style>
 </head>
 
@@ -130,29 +178,52 @@
             </div>
 
             <!-- Form Section -->
-            <div class="max-w-md mx-auto bg-white rounded-lg  p-8">
-                <h3 class="text-xl font-semibold text-center mb-6">
-                    Fill This Form to Join With Us
-                </h3>
-                <form class="space-y-4">
-                    <input type="text" placeholder="Name" class="w-full px-4 py-2 border rounded-md">
-                    <input type="tel" placeholder="Phone Number" class="w-full px-4 py-2 border rounded-md">
-
-                    <div class="grid grid-cols-2 gap-4">
-                        <label class="flex items-center space-x-2">
-                            <input type="radio" name="class-type">
-                            <span>Online Classes</span>
-                        </label>
-                        <label class="flex items-center space-x-2">
-                            <input type="radio" name="class-type">
-                            <span>Offline Classes</span>
-                        </label>
+            <div class="max-w-5xl mx-auto bg-white rounded-lg  p-8">
+                <form class="space-y-4 grid grid-cols-1 md:grid-cols-2">
+                    <!-- Form Title -->
+                    <div class="mb-8 flex justify-center items-center">
+                        <div>
+                            <h2 class="text-5xl font-bold text-gray-800">Fill This Form</h2>
+                            <p class="text-xl text-gray-800">to Join With Us</p>
+                        </div>
                     </div>
+                    <div class="space-y-4">
+                        <!-- Name Input -->
+                        <div>
+                            <input type="text" placeholder="Name" class="input-field w-full px-4 py-3 text-gray-700"
+                                required>
+                        </div>
 
-                    <button type="submit"
-                        class="w-full bg-green-600 hover:bg-teal-700 text-white py-2 rounded-md transition-colors">
-                        Yes, I want to Learn Share Trading
-                    </button>
+                        <!-- Phone Input -->
+                        <div>
+                            <input type="tel" placeholder="Phone Number"
+                                class="input-field w-full px-4 py-3 text-gray-700" required>
+                        </div>
+
+                        <!-- Radio Buttons -->
+                        <div class="grid grid-cols-2 gap-4">
+                            <div>
+                                <input type="radio" id="online" name="class-type" class="radio-button" required>
+                                <label for="online"
+                                    class="radio-label block text-center py-3 px-4 rounded-lg cursor-pointer">
+                                    Online Classes
+                                </label>
+                            </div>
+                            <div>
+                                <input type="radio" id="offline" name="class-type" class="radio-button">
+                                <label for="offline"
+                                    class="radio-label block text-center py-3 px-4 rounded-lg cursor-pointer">
+                                    Offline Classes
+                                </label>
+                            </div>
+                        </div>
+
+                        <!-- Submit Button -->
+                        <button type="submit"
+                            class="w-full bg-green-600 hover:bg-teal-700 text-white py-3 px-6 rounded-full text-lg transition-colors">
+                            Yes, I want to Learn Share Trading
+                        </button>
+                    </div>
                 </form>
             </div>
 
@@ -202,10 +273,10 @@
                 <!-- Video Card Section -->
                 <div class="max-w-4xl mx-auto rounded-3xl overflow-hidden shadow-2xl mb-16">
                     <div class="relative">
-                        <img src="./sunil.JPG" alt="Sunil Mathai" class="w-full object-cover h-[400px]">
+                        <img src="./sunil.jpg" alt="Sunil Mathai" class="w-full object-cover">
                         <div class="video-overlay absolute inset-0 flex items-center justify-center">
                             <!-- Play Button -->
-                            <button
+                            <button onclick="openVideoModal()"
                                 class="w-16 h-16 bg-red-600 rounded-full flex items-center justify-center hover:bg-red-700 transition-colors">
                                 <svg class="w-8 h-8 text-white fill-current" viewBox="0 0 24 24">
                                     <path d="M8 5v14l11-7z" />
@@ -213,9 +284,9 @@
                             </button>
                             <!-- Profile Info -->
                             <div class="absolute bottom-0 left-0 p-8 text-white">
-                                <h2 class="text-3xl font-bold mb-2">Sunil Mathai</h2>
-                                <p class="text-lg mb-1">10 years of share trading and teaching experience,</p>
-                                <p class="text-lg">Price action option trader, CEO of Trade Talks</p>
+                                <h2 class="md:text-3xl text-2xl font-boldmd: mb-2">Sunil Mathai</h2>
+                                <p class="md:text-lg md:mb-1">10 years of share trading and teaching experience,</p>
+                                <p class="md:text-lg">Price action option trader, CEO of Trade Talks</p>
                             </div>
                         </div>
                     </div>
@@ -465,7 +536,7 @@
     </section>
     <!-- testimonials -->
     <section class=" py-16">
-        <div class="container mx-auto px-4 max-w-3xl">
+        <div class="container mx-auto px-4 max-w-7xl">
             <!-- Section Header -->
             <div class="text-center mb-12">
                 <h2 class="text-4xl font-bold mb-4">What Our Students Say</h2>
@@ -599,7 +670,7 @@
         // Auto-play
         setInterval(nextSlide, 5000);
     </script>
-    <footer class="bg-gray-50 border-t border-gray-100">
+    <footer class="bg-black border-t border-gray-100">
         <div class="container mx-auto max-w-6xl px-4">
             <!-- Main Footer Content -->
             <div class="py-12 grid grid-cols-1 md:grid-cols-4 gap-8">
@@ -607,14 +678,14 @@
                 <div class="space-y-4">
                     <h3 class="text-2xl font-bold"> <img src="./Trade Talks Logo white.png" alt="Trade Talks"
                             class="h-10 w-auto"></h3>
-                    <p class="text-gray-600 text-sm">Kerala's No.1 Share Trading Academy, empowering traders since 2015.
+                    <p class="text-gray-300 text-sm">Kerala's No.1 Share Trading Academy, empowering traders since 2015.
                     </p>
                 </div>
 
                 <!-- Quick Links -->
                 <div>
-                    <h4 class="font-semibold mb-4 text-gray-900">Quick Links</h4>
-                    <ul class="space-y-2 text-gray-600">
+                    <h4 class="font-semibold mb-4 text-gray-400">Quick Links</h4>
+                    <ul class="space-y-2 text-gray-300">
                         <li><a href="#" class="hover:text-teal-600 transition-colors">About Us</a></li>
                         <li><a href="#" class="hover:text-teal-600 transition-colors">Our Courses</a></li>
                         <li><a href="#" class="hover:text-teal-600 transition-colors">Testimonials</a></li>
@@ -624,8 +695,8 @@
 
                 <!-- Contact -->
                 <div>
-                    <h4 class="font-semibold mb-4 text-gray-900">Contact</h4>
-                    <ul class="space-y-2 text-gray-600">
+                    <h4 class="font-semibold mb-4 text-gray-400">Contact</h4>
+                    <ul class="space-y-2 text-gray-300">
                         <li class="flex items-center space-x-2">
                             <svg class="w-4 h-4" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
@@ -645,7 +716,7 @@
 
                 <!-- Social Media -->
                 <div>
-                    <h4 class="font-semibold mb-4 text-gray-900">Follow Us</h4>
+                    <h4 class="font-semibold mb-4 text-gray-400">Follow Us</h4>
                     <div class="flex space-x-4">
                         <!-- Instagram -->
                         <a href="#" class="hover:text-teal-600 transition-colors">
@@ -667,7 +738,7 @@
 
             <!-- Bottom Bar -->
             <div class="py-4 border-t border-gray-200">
-                <div class="flex flex-col md:flex-row justify-between items-center text-sm text-gray-600">
+                <div class="flex flex-col md:flex-row justify-between items-center text-sm text-gray-300">
                     <p>&copy; 2025 Trade Talks. All rights reserved.</p>
                     <div class="flex space-x-4 mt-2 md:mt-0">
                         <a href="#" class="hover:text-teal-600 transition-colors">Privacy Policy</a>
@@ -677,6 +748,105 @@
             </div>
         </div>
     </footer>
+
+    <div class="float-buttons fixed bottom-6 right-6 flex flex-col gap-4">
+        <!-- WhatsApp -->
+        <a href="https://wa.me/+919876543210" target="_blank" class="contact-button relative group">
+            <div
+                class="tooltip absolute right-full mr-2 bg-black text-white px-2 py-1 rounded text-sm whitespace-nowrap top-1/2 -translate-y-1/2">
+                Message on WhatsApp
+                <div class="absolute -right-1 top-1/2 -translate-y-1/2 w-2 h-2 bg-black transform rotate-45"></div>
+            </div>
+            <div
+                class="bg-green-500 text-white p-3 rounded-full shadow-lg hover:bg-green-600 flex items-center justify-center">
+                <svg class="w-6 h-6" fill="currentColor" viewBox="0 0 24 24">
+                    <path
+                        d="M12.012 2c-5.506 0-9.989 4.478-9.99 9.984a9.964 9.964 0 001.333 4.993L2 22l5.233-1.237a9.994 9.994 0 004.779 1.217h.004c5.505 0 9.988-4.478 9.988-9.984 0-2.666-1.037-5.172-2.922-7.057A9.935 9.935 0 0012.012 2zm0 18.355h-.003a8.332 8.332 0 01-4.249-1.163l-.305-.182-3.16.745.781-3.091-.2-.332a8.341 8.341 0 01-1.267-4.348c0-4.58 3.728-8.304 8.307-8.304a8.263 8.263 0 015.888 2.439 8.266 8.266 0 012.419 5.865c-.001 4.58-3.729 8.371-8.211 8.371zm4.872-6.375c-.254-.141-1.485-.724-1.715-.808-.23-.084-.397-.126-.564.127-.167.253-.648.808-.794.971-.146.164-.292.186-.544.044-.253-.141-1.067-.39-2.031-1.241-.75-.665-1.256-1.487-1.403-1.739-.147-.253-.016-.39.11-.516.113-.112.25-.291.376-.437.125-.146.167-.25.25-.417.084-.166.042-.311-.02-.437-.063-.125-.564-1.349-.772-1.847-.203-.483-.41-.417-.564-.425-.146-.008-.313-.01-.48-.01-.167 0-.438.063-.667.317-.23.253-.877.857-.877 2.088 0 1.232.903 2.423 1.028 2.589.125.166 1.746 2.672 4.229 3.747.592.255 1.054.408 1.413.522.594.189 1.134.162 1.562.099.476-.071 1.465-.599 1.672-1.177.207-.579.207-1.075.146-1.177-.062-.103-.23-.165-.481-.289z" />
+                </svg>
+            </div>
+        </a>
+
+        <!-- Phone -->
+        <a href="tel:+919876543210" class="contact-button relative group">
+            <div
+                class="tooltip absolute right-full mr-2 bg-black text-white px-2 py-1 rounded text-sm whitespace-nowrap top-1/2 -translate-y-1/2">
+                Call Us
+                <div class="absolute -right-1 top-1/2 -translate-y-1/2 w-2 h-2 bg-black transform rotate-45"></div>
+            </div>
+            <div
+                class="bg-blue-500 text-white p-3 rounded-full shadow-lg hover:bg-blue-600 flex items-center justify-center">
+                <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                        d="M3 5a2 2 0 012-2h3.28a1 1 0 01.948.684l1.498 4.493a1 1 0 01-.502 1.21l-2.257 1.13a11.042 11.042 0 005.516 5.516l1.13-2.257a1 1 0 011.21-.502l4.493 1.498a1 1 0 01.684.949V19a2 2 0 01-2 2h-1C9.716 21 3 14.284 3 6V5z" />
+                </svg>
+            </div>
+        </a>
+
+        <!-- Email -->
+        <a href="mailto:info@tradetalks.in" class="contact-button relative group">
+            <div
+                class="tooltip absolute right-full mr-2 bg-black text-white px-2 py-1 rounded text-sm whitespace-nowrap top-1/2 -translate-y-1/2">
+                Email Us
+                <div class="absolute -right-1 top-1/2 -translate-y-1/2 w-2 h-2 bg-black transform rotate-45"></div>
+            </div>
+            <div
+                class="bg-red-500 text-white p-3 rounded-full shadow-lg hover:bg-red-600 flex items-center justify-center">
+                <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                        d="M3 8l7.89 5.26a2 2 0 002.22 0L21 8M5 19h14a2 2 0 002-2V7a2 2 0 00-2-2H5a2 2 0 00-2 2v10a2 2 0 002 2z" />
+                </svg>
+            </div>
+        </a>
+    </div>
+
+    <div id="videoModal" class="fixed inset-0 bg-black bg-black flex items-center justify-center z-50 hidden">
+        <div class="relative w-full max-w-4xl mx-4">
+            <!-- Close Button -->
+            <button onclick="closeVideoModal()" class="absolute -top-10 right-0 text-white hover:text-gray-300">
+                <svg class="w-8 h-8" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12">
+                    </path>
+                </svg>
+            </button>
+
+            <!-- Video Container -->
+            <div class="relative pt-[56.25%]">
+               
+
+                <iframe  id="youtubeVideo" width="560" height="315" src="https://www.youtube.com/embed/AdHcxGw3dBo?si=ATCjlzFmWZyH9IXu"
+                    title="YouTube video player" frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                    referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            </div>
+        </div>
+    </div>
+    <script>
+        function openVideoModal() {
+            const modal = document.getElementById('videoModal');
+            const videoFrame = document.getElementById('youtubeVideo');
+            modal.classList.remove('hidden');
+            
+            // Prevent body scrolling when modal is open
+            document.body.style.overflow = 'hidden';
+        }
+
+        function closeVideoModal() {
+            const modal = document.getElementById('videoModal');
+            const videoFrame = document.getElementById('youtubeVideo');
+            modal.classList.add('hidden');
+            // Stop video playback when modal is closed
+            videoFrame.src = '';
+            // Restore body scrolling
+            document.body.style.overflow = 'auto';
+        }
+
+        // Close modal when clicking outside the video
+        document.getElementById('videoModal').addEventListener('click', function (e) {
+            if (e.target === this) {
+                closeVideoModal();
+            }
+        });
+    </script>
 </body>
 
 </html>
