--- a/index.html
+++ b/index.html
@@ -670,6 +670,11 @@
         // Auto-play
         setInterval(nextSlide, 5000);
     </script>
+    <iframe
+    class="w-full"
+        src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d125668.30643001317!2d76.2893579!3d10.1697149!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3b0807c7b0e94c2b%3A0x5063d5823da7bb9e!2sTrade%20Talks%20Share%20Trading%20Academy%20%7C%20Share%20Market%20Courses%20Kerala%20%7C%20Stock%20Market%20Course!5e0!3m2!1sen!2sin!4v1736769152779!5m2!1sen!2sin"
+        width="1080" height="300" style="border:0;" allowfullscreen="" loading="lazy"
+        referrerpolicy="no-referrer-when-downgrade"></iframe>
     <footer class="bg-black border-t border-gray-100">
         <div class="container mx-auto max-w-6xl px-4">
             <!-- Main Footer Content -->
@@ -684,12 +689,13 @@
 
                 <!-- Quick Links -->
                 <div>
-                    <h4 class="font-semibold mb-4 text-gray-400">Quick Links</h4>
+                    <h4 class="font-semibold mb-4 text-gray-400">Visit Us</h4>
                     <ul class="space-y-2 text-gray-300">
-                        <li><a href="#" class="hover:text-teal-600 transition-colors">About Us</a></li>
-                        <li><a href="#" class="hover:text-teal-600 transition-colors">Our Courses</a></li>
-                        <li><a href="#" class="hover:text-teal-600 transition-colors">Testimonials</a></li>
-                        <li><a href="#" class="hover:text-teal-600 transition-colors">Contact</a></li>
+                        <p>
+                            Optionauts private limited Thenkulam <br>
+                            residency 123, Shanthigram Rd, <br>
+                            Angamaly, Kerala 683589 <br>
+                        </p>
                     </ul>
                 </div>
 
@@ -702,7 +708,7 @@
                                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
                                     d="M3 5a2 2 0 012-2h3.28a1 1 0 01.948.684l1.498 4.493a1 1 0 01-.502 1.21l-2.257 1.13a11.042 11.042 0 005.516 5.516l1.13-2.257a1 1 0 011.21-.502l4.493 1.498a1 1 0 01.684.949V19a2 2 0 01-2 2h-1C9.716 21 3 14.284 3 6V5z" />
                             </svg>
-                            <span>+91 98765 43210</span>
+                            <span>+91 9072722294</span>
                         </li>
                         <li class="flex items-center space-x-2">
                             <svg class="w-4 h-4" fill="none" stroke="currentColor" viewBox="0 0 24 24">
@@ -751,7 +757,7 @@
 
     <div class="float-buttons fixed bottom-6 right-6 flex flex-col gap-4">
         <!-- WhatsApp -->
-        <a href="https://wa.me/+919876543210" target="_blank" class="contact-button relative group">
+        <a href="https://wa.me/+919072722294" target="_blank" class="contact-button relative group">
             <div
                 class="tooltip absolute right-full mr-2 bg-black text-white px-2 py-1 rounded text-sm whitespace-nowrap top-1/2 -translate-y-1/2">
                 Message on WhatsApp
@@ -767,7 +773,7 @@
         </a>
 
         <!-- Phone -->
-        <a href="tel:+919876543210" class="contact-button relative group">
+        <a href="tel:+919072722294" class="contact-button relative group">
             <div
                 class="tooltip absolute right-full mr-2 bg-black text-white px-2 py-1 rounded text-sm whitespace-nowrap top-1/2 -translate-y-1/2">
                 Call Us
@@ -811,10 +817,11 @@
 
             <!-- Video Container -->
             <div class="relative pt-[56.25%]">
-               
 
-                <iframe  id="youtubeVideo" width="560" height="315" src="https://www.youtube.com/embed/AdHcxGw3dBo?si=ATCjlzFmWZyH9IXu"
-                    title="YouTube video player" frameborder="0"
+
+                <iframe id="youtubeVideo" width="560" height="315"
+                    src="https://www.youtube.com/embed/AdHcxGw3dBo?si=ATCjlzFmWZyH9IXu" title="YouTube video player"
+                    frameborder="0"
                     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                     referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
             </div>
@@ -825,7 +832,7 @@
             const modal = document.getElementById('videoModal');
             const videoFrame = document.getElementById('youtubeVideo');
             modal.classList.remove('hidden');
-            
+
             // Prevent body scrolling when modal is open
             document.body.style.overflow = 'hidden';
         }
