--- a/index.html
+++ b/index.html
@@ -317,34 +317,43 @@
                         </p>
                     </div>
                     <div class="border-2 border-green-600 rounded-lg p-4">
-                        <h2 class="text-xl font-bold text-green-600">Working Proffessionals</h2>
+                        <h2 class="text-xl font-bold text-green-600">Doctoes</h2>
                         <p>
-                            Looking to build a second income stream or invest smarter for long-term gains.
+                            Wanting to diversify investments and
+                            create additional financial security
+                            outside of their practice.
                         </p>
                     </div>
                     <div class="border-2 border-green-600 rounded-lg p-4">
-                        <h2 class="text-xl font-bold text-green-600">Working Proffessionals</h2>
+                        <h2 class="text-xl font-bold text-green-600">Bankers</h2>
                         <p>
-                            Looking to build a second income stream or invest smarter for long-term gains.
+                            Interested in expanding their
+                            understanding of financial markets
+                            and trading strategies.
                         </p>
                     </div>
 
                     <div class="border-2 border-green-600 rounded-lg p-4">
-                        <h2 class="text-xl font-bold text-green-600">Working Proffessionals</h2>
+                        <h2 class="text-xl font-bold text-green-600">College Students</h2>
                         <p>
-                            Looking to build a second income stream or invest smarter for long-term gains.
+                            Eager to learn about the stock market
+                            early and start building wealth.
                         </p>
                     </div>
                     <div class="border-2 border-green-600 rounded-lg p-4">
-                        <h2 class="text-xl font-bold text-green-600">Working Proffessionals</h2>
+                        <h2 class="text-xl font-bold text-green-600">Housewives</h2>
                         <p>
-                            Looking to build a second income stream or invest smarter for long-term gains.
+                            Looking for a flexible way to contribute
+                            financially while managing their
+                            household
                         </p>
                     </div>
                     <div class="border-2 border-green-600 rounded-lg p-4">
-                        <h2 class="text-xl font-bold text-green-600">Working Proffessionals</h2>
+                        <h2 class="text-xl font-bold text-green-600">Retired Individuals</h2>
                         <p>
-                            Looking to build a second income stream or invest smarter for long-term gains.
+                            Searching for ways to grow their
+                            retirement savings with strategic
+                            investments.
                         </p>
                     </div>
                 </div>
@@ -670,8 +679,7 @@
         // Auto-play
         setInterval(nextSlide, 5000);
     </script>
-    <iframe
-    class="w-full"
+    <iframe class="w-full"
         src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d125668.30643001317!2d76.2893579!3d10.1697149!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3b0807c7b0e94c2b%3A0x5063d5823da7bb9e!2sTrade%20Talks%20Share%20Trading%20Academy%20%7C%20Share%20Market%20Courses%20Kerala%20%7C%20Stock%20Market%20Course!5e0!3m2!1sen!2sin!4v1736769152779!5m2!1sen!2sin"
         width="1080" height="300" style="border:0;" allowfullscreen="" loading="lazy"
         referrerpolicy="no-referrer-when-downgrade"></iframe>
