mailt to : info@

--- a/index.html
+++ b/index.html
@@ -797,7 +797,7 @@
         </a>
 
         <!-- Email -->
-        <a href="mailto:info@tradetalks.in" class="contact-button relative group">
+        <a href="mailto:info@tradetalks.co.in" class="contact-button relative group">
             <div
                 class="tooltip absolute right-full mr-2 bg-black text-white px-2 py-1 rounded text-sm whitespace-nowrap top-1/2 -translate-y-1/2">
                 Email Us
