--- a/index.html
+++ b/index.html
@@ -178,10 +178,10 @@
             </div>
 
             <!-- Form Section -->
-            <div class="max-w-5xl mx-auto bg-white rounded-lg  p-8">
+            <div class="max-w-5xl mx-auto bg-white rounded-lg  pt-8">
                 <form class="space-y-4 grid grid-cols-1 md:grid-cols-2">
                     <!-- Form Title -->
-                    <div class="mb-8 flex justify-center items-center">
+                    <div class="md:mb-8 pt-10 flex justify-center items-center">
                         <div>
                             <h2 class="text-5xl font-bold text-gray-800">Fill This Form</h2>
                             <p class="text-xl text-gray-800">to Join With Us</p>
@@ -205,14 +205,14 @@
                             <div>
                                 <input type="radio" id="online" name="class-type" class="radio-button" required>
                                 <label for="online"
-                                    class="radio-label block text-center py-3 px-4 rounded-lg cursor-pointer">
+                                    class="radio-label block text-center py-3 px-2 rounded-lg cursor-pointer">
                                     Online Classes
                                 </label>
                             </div>
                             <div>
                                 <input type="radio" id="offline" name="class-type" class="radio-button">
                                 <label for="offline"
-                                    class="radio-label block text-center py-3 px-4 rounded-lg cursor-pointer">
+                                    class="radio-label block text-center py-3 px-2 rounded-lg cursor-pointer">
                                     Offline Classes
                                 </label>
                             </div>
@@ -273,7 +273,7 @@
                 <!-- Video Card Section -->
                 <div class="max-w-4xl mx-auto rounded-3xl overflow-hidden shadow-2xl mb-16">
                     <div class="relative">
-                        <img src="./sunil.jpg" alt="Sunil Mathai" class="w-full object-cover">
+                        <img src="./sunilma.jpg" alt="Sunil Mathai" class="w-full object-cover">
                         <div class="video-overlay absolute inset-0 flex items-center justify-center">
                             <!-- Play Button -->
                             <button onclick="openVideoModal()"
