--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
             <div class="max-w-5xl mx-auto bg-white rounded-lg  pt-8">
                 <form class="space-y-4 grid grid-cols-1 md:grid-cols-2">
                     <!-- Form Title -->
-                    <div class="md:mb-8 pt-10 flex justify-center items-center">
+                    <div class="md:mb-8 pt-10 flex md:justify-center items-center">
                         <div>
                             <h2 class="text-5xl font-bold text-gray-800">Fill This Form</h2>
                             <p class="text-xl text-gray-800">to Join With Us</p>
@@ -277,7 +277,7 @@
                         <div class="video-overlay absolute inset-0 flex items-center justify-center">
                             <!-- Play Button -->
                             <button onclick="openVideoModal()"
-                                class="w-16 h-16 bg-red-600 rounded-full flex items-center justify-center hover:bg-red-700 transition-colors">
+                                class="w-16 h-16 bg-red-600 z-20 rounded-full flex items-center justify-center hover:bg-red-700 transition-colors">
                                 <svg class="w-8 h-8 text-white fill-current" viewBox="0 0 24 24">
                                     <path d="M8 5v14l11-7z" />
                                 </svg>
