--- a/index.html
+++ b/index.html
@@ -824,10 +824,10 @@
             </button>
 
             <!-- Video Container -->
-            <div class="relative pt-[56.25%]">
+            <div class="relative ">
 
 
-                <iframe id="youtubeVideo" width="560" height="315"
+                <iframe id="youtubeVideo" class="w-full h-full"
                     src="https://www.youtube.com/embed/AdHcxGw3dBo?si=ATCjlzFmWZyH9IXu" title="YouTube video player"
                     frameborder="0"
                     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
