--- a/index.html
+++ b/index.html
@@ -310,21 +310,21 @@
                 </div>
 
                 <div class="max-w-7xl mx-auto grid md:grid-cols-6 gap-2 items-center mt-10">
-                    <div class="border-2 border-green-600 rounded-lg p-4">
+                    <div class="border-2 border-green-600 rounded-lg p-4  h-52 ">
                         <h2 class="text-xl font-bold text-green-600">Working Proffessionals</h2>
                         <p>
                             Looking to build a second income stream or invest smarter for long-term gains.
                         </p>
                     </div>
-                    <div class="border-2 border-green-600 rounded-lg p-4">
-                        <h2 class="text-xl font-bold text-green-600">Doctoes</h2>
+                    <div class="border-2 border-green-600 rounded-lg p-4  h-52 ">
+                        <h2 class="text-xl font-bold text-green-600">Doctors</h2>
                         <p>
                             Wanting to diversify investments and
                             create additional financial security
                             outside of their practice.
                         </p>
                     </div>
-                    <div class="border-2 border-green-600 rounded-lg p-4">
+                    <div class="border-2 border-green-600 rounded-lg p-4  h-52 ">
                         <h2 class="text-xl font-bold text-green-600">Bankers</h2>
                         <p>
                             Interested in expanding their
@@ -333,14 +333,14 @@
                         </p>
                     </div>
 
-                    <div class="border-2 border-green-600 rounded-lg p-4">
+                    <div class="border-2 border-green-600 rounded-lg p-4  h-52 ">
                         <h2 class="text-xl font-bold text-green-600">College Students</h2>
                         <p>
                             Eager to learn about the stock market
                             early and start building wealth.
                         </p>
                     </div>
-                    <div class="border-2 border-green-600 rounded-lg p-4">
+                    <div class="border-2 border-green-600 rounded-lg p-4  h-52 ">
                         <h2 class="text-xl font-bold text-green-600">Housewives</h2>
                         <p>
                             Looking for a flexible way to contribute
@@ -348,7 +348,7 @@
                             household
                         </p>
                     </div>
-                    <div class="border-2 border-green-600 rounded-lg p-4">
+                    <div class="border-2 border-green-600 rounded-lg p-4  h-52 ">
                         <h2 class="text-xl font-bold text-green-600">Retired Individuals</h2>
                         <p>
                             Searching for ways to grow their
@@ -360,10 +360,10 @@
             </div>
         </div>
     </section>
-    <h2 class="text-center md:text-7xl text-4xl font-bold mt-32">Why choose us?</h2>
+    <h2 class="text-center md:text-7xl text-4xl font-bold">Why choose us?</h2>
     <p class="text-center text-gray-500 mt-2 p-4">Discover the unmatched advantages of joining Trade Talks Kerala's No.1
         Share Trading Academy.</p>
-    <section class="py-16 px-4">
+    <section class=" px-4">
         <div class="container mx-auto max-w-7xl">
             <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
                 <!-- Expert Mentorship Card -->
@@ -431,10 +431,10 @@
     <section class="py-16 px-4">
         <div class="container mx-auto max-w-7xl">
             <!-- Section Header -->
-            <div class="mb-16">
+            <div class="mb-5 ">
                 <h2 class="text-4xl md:text-5xl font-bold">
-                    Meet Our<br>
-                    <span class="inline-block mt-2">Mentors.</span>
+                    Meet Our
+                   Mentors
                 </h2>
             </div>
 
