--- a/index.html
+++ b/index.html
@@ -544,11 +544,11 @@
         </div>
     </section>
     <!-- testimonials -->
-    <section class="py-16">
+    <section class="py-8">
         <div class="container mx-auto px-4 max-w-7xl">
             <!-- Section Header -->
-            <div class="text-center mb-12">
-                <h2 class="text-4xl font-bold mb-4">What Our Students Say</h2>
+            <div class="text-center">
+                <h2 class="text-4xl font-bold ">What Our Students Say</h2>
                 <p class="text-gray-600">Hear from our successful traders</p>
             </div>
 
@@ -778,108 +778,98 @@
         // Auto-play
         setInterval(nextSlide, 5000);
     </script>
-    <section class=" py-8">
-        <div class="container mx-auto px-4 max-w-7xl">
-            <!-- Timer and Flash Offer Banner -->
-            <div class="bg-yellow-100 border-2 border-yellow-400 rounded-lg p-4 mb-8 text-center">
-                <div class="flex justify-center items-center space-x-4">
-                    <svg class="w-6 h-6 text-yellow-600" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                            d="M12 8v4l3 3m6-3a9 9 0 11-18 0 9 9 0 0118 0z"></path>
-                    </svg>
-                    <p class="text-lg font-semibold text-yellow-800">Limited Time Flash Offer!</p>
-                </div>
-            </div>
-
-            <!-- Section Header -->
-            <div class="text-center mb-12">
-                <h2 class="text-4xl font-bold mb-4">Grab These Bonuses When You Join Our Course Today!</h2>
-            </div>
-
-            <!-- Bonuses Grid -->
-            <div class="grid md:grid-cols-2 gap-8 mb-12">
-                <!-- Bonus 1 -->
-                <div class="bg-white p-6 rounded-xl shadow-md">
-                    <h3 class="text-xl font-semibold mb-2">Free E-Book: "The Ultimate Guide to Stock Trading"</h3>
-                    <p class="text-gray-600 mb-2">Get access to our comprehensive e-book, packed with tips and
-                        strategies to kickstart your trading journey.</p>
-                    <p class="text-teal-600 font-semibold">Worth ₹1,500</p>
-                </div>
-
-                <!-- Bonus 2 -->
-                <div class="bg-white p-6 rounded-xl shadow-md">
-                    <h3 class="text-xl font-semibold mb-2">Personalized Trading Plan</h3>
-                    <p class="text-gray-600 mb-2">Receive a customized trading plan tailored to your financial goals and
-                        risk tolerance, crafted by our expert mentors.</p>
-                    <p class="text-teal-600 font-semibold">Worth ₹2,000</p>
-                </div>
-
-                <!-- Bonus 3 -->
-                <div class="bg-white p-6 rounded-xl shadow-md">
-                    <h3 class="text-xl font-semibold mb-2">Exclusive Webinars</h3>
-                    <p class="text-gray-600 mb-2">Participate in monthly webinars featuring industry experts, where you
-                        can ask questions and gain insights into the latest market trends.</p>
-                    <p class="text-teal-600 font-semibold">Worth ₹3,000</p>
-                </div>
-
-                <!-- Bonus 4 -->
-                <div class="bg-white p-6 rounded-xl shadow-md">
-                    <h3 class="text-xl font-semibold mb-2">1 Year Access to Course Materials</h3>
-                    <p class="text-gray-600 mb-2">Enjoy lifetime access to all course materials, including recorded
-                        sessions, presentations, and supplementary resources.</p>
-                    <p class="text-teal-600 font-semibold">Worth ₹5,000</p>
-                </div>
-
-                <!-- Bonus 5 -->
-                <div class="bg-white p-6 rounded-xl shadow-md">
-                    <h3 class="text-xl font-semibold mb-2">Lifetime Access to Premium Community</h3>
-                    <p class="text-gray-600 mb-2">Join a thriving community of 5000+ Traders and benefit from ongoing
-                        discussions, networking opportunities, and shared resources.</p>
-                    <p class="text-teal-600 font-semibold">Worth ₹6,000</p>
-                </div>
-
-                <!-- Bonus 6 -->
-                <div class="bg-white p-6 rounded-xl shadow-md">
-                    <h3 class="text-xl font-semibold mb-2">Networking Opportunities</h3>
-                    <p class="text-gray-600 mb-2">Connect with fellow traders through our exclusive community forums and
-                        events, allowing you to share experiences and learn from each other.</p>
-                    <p class="text-teal-600 font-semibold">Worth ₹2,500</p>
-                </div>
-
-                <!-- Bonus 7 -->
-                <div class="bg-white p-6 rounded-xl shadow-md">
-                    <h3 class="text-xl font-semibold mb-2">Discount on Advanced Courses</h3>
-                    <p class="text-gray-600 mb-2">Get an exclusive discount on future advanced trading courses, helping
-                        you to continue your education and growth as a trader.</p>
-                    <p class="text-teal-600 font-semibold">Worth ₹3,500</p>
-                </div>
-
-                <!-- Bonus 8 -->
-                <div class="bg-white p-6 rounded-xl shadow-md">
-                    <h3 class="text-xl font-semibold mb-2">Certificate of Completion</h3>
-                    <p class="text-gray-600 mb-2">Earn a prestigious certificate upon course completion, showcasing your
-                        commitment to mastering share trading.</p>
-                    <p class="text-teal-600 font-semibold">Worth ₹1,000</p>
-                </div>
-            </div>
-
-            <!-- Total Value -->
-            <div class="text-center mb-12">
-                <p class="text-2xl font-bold text-teal-600">Total Bonus Value: ₹24,500!</p>
-                <p class="text-lg text-gray-600 mt-4">Don't miss out on these incredible bonuses! Join Trade Talks today
-                    and take the first step toward a profitable trading career!</p>
-            </div>
-
-            <!-- CTA Button -->
-            <div class="text-center">
-                <a href="#enrollment-form"
-                    class="inline-block bg-green-600 text-white text-2xl font-bold px-12 py-6 rounded-xl shadow-lg hover:bg-teal-700 transform hover:-translate-y-1 transition-all duration-200">
-                    Yes, I Want to Learn Stock Trading in Malayalam
-                </a>
+ <section class="py-16 bg-gray-50">
+    <div class="container mx-auto px-4 max-w-5xl">
+        <!-- Timer and Flash Offer Banner -->
+        <div class="bg-yellow-100 border-2 border-yellow-400 rounded-lg p-4 mb-8 text-center">
+            <div class="flex justify-center items-center space-x-4">
+                <svg class="w-6 h-6 text-yellow-600" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                        d="M12 8v4l3 3m6-3a9 9 0 11-18 0 9 9 0 0118 0z"></path>
+                </svg>
+                <p class="text-lg font-semibold text-yellow-800">Limited Time Flash Offer!</p>
             </div>
         </div>
-    </section>
-    <section class="py-16 ">
+
+        <!-- Section Header -->
+        <div class="text-center mb-12">
+            <h2 class="text-4xl font-bold mb-4">Grab These Bonuses When You Join Our Course Today!</h2>
+        </div>
+
+        <!-- Bonuses Grid -->
+        <div class="grid md:grid-cols-2 gap-8 mb-12">
+            <!-- Bonus 1 - Teal -->
+            <div class="bg-blue-50 p-6 rounded-xl shadow-md border border-teal-100">
+                <h3 class="text-xl font-semibold mb-2 text-teal-900">Free E-Book: "The Ultimate Guide to Stock Trading"</h3>
+                <p class="text-gray-600 mb-2">Get access to our comprehensive e-book, packed with tips and strategies to kickstart your trading journey.</p>
+                <p class="text-teal-600 font-semibold">Worth ₹1,500</p>
+            </div>
+
+            <!-- Bonus 2 - Blue -->
+            <div class="bg-green-50 p-6 rounded-xl shadow-md border border-blue-100">
+                <h3 class="text-xl font-semibold mb-2 text-blue-900">Personalized Trading Plan</h3>
+                <p class="text-gray-600 mb-2">Receive a customized trading plan tailored to your financial goals and risk tolerance.</p>
+                <p class="text-blue-600 font-semibold">Worth ₹2,000</p>
+            </div>
+
+            <!-- Bonus 3 - Purple -->
+            <div class="bg-purple-50 p-6 rounded-xl shadow-md border border-purple-100">
+                <h3 class="text-xl font-semibold mb-2 text-purple-900">Exclusive Webinars</h3>
+                <p class="text-gray-600 mb-2">Participate in monthly webinars featuring industry experts and gain insights into market trends.</p>
+                <p class="text-purple-600 font-semibold">Worth ₹3,000</p>
+            </div>
+
+            <!-- Bonus 4 - Indigo -->
+            <div class="bg-indigo-50 p-6 rounded-xl shadow-md border border-indigo-100">
+                <h3 class="text-xl font-semibold mb-2 text-indigo-900">1 Year Access to Course Materials</h3>
+                <p class="text-gray-600 mb-2">Enjoy lifetime access to all course materials, including recorded sessions and resources.</p>
+                <p class="text-indigo-600 font-semibold">Worth ₹5,000</p>
+            </div>
+
+            <!-- Bonus 5 - Sky -->
+            <div class="bg-yellow-50 p-6 rounded-xl shadow-md border border-sky-100">
+                <h3 class="text-xl font-semibold mb-2 text-sky-900">Lifetime Access to Premium Community</h3>
+                <p class="text-gray-600 mb-2">Join a thriving community of 5000+ Traders and benefit from shared knowledge.</p>
+                <p class="text-sky-600 font-semibold">Worth ₹6,000</p>
+            </div>
+
+            <!-- Bonus 6 - Emerald -->
+            <div class="bg-red-50 p-6 rounded-xl shadow-md border border-emerald-100">
+                <h3 class="text-xl font-semibold mb-2 text-emerald-900">Networking Opportunities</h3>
+                <p class="text-gray-600 mb-2">Connect with fellow traders through our exclusive community forums and events.</p>
+                <p class="text-emerald-600 font-semibold">Worth ₹2,500</p>
+            </div>
+
+            <!-- Bonus 7 - Cyan -->
+            <div class="bg-blue-50 p-6 rounded-xl shadow-md border border-cyan-100">
+                <h3 class="text-xl font-semibold mb-2 text-cyan-900">Discount on Advanced Courses</h3>
+                <p class="text-gray-600 mb-2">Get an exclusive discount on future advanced trading courses.</p>
+                <p class="text-cyan-600 font-semibold">Worth ₹3,500</p>
+            </div>
+
+            <!-- Bonus 8 - Rose -->
+            <div class="bg-green-50 p-6 rounded-xl shadow-md border border-rose-100">
+                <h3 class="text-xl font-semibold mb-2 text-rose-900">Certificate of Completion</h3>
+                <p class="text-gray-600 mb-2">Earn a prestigious certificate upon course completion.</p>
+                <p class="text-rose-600 font-semibold">Worth ₹1,000</p>
+            </div>
+        </div>
+
+        <!-- Total Value -->
+        <div class="text-center mb-12">
+            <p class="text-2xl font-bold text-teal-600">Total Bonus Value: ₹24,500!</p>
+            <p class="text-lg text-gray-600 mt-4">Don't miss out on these incredible bonuses! Join Trade Talks today and take the first step toward a profitable trading career!</p>
+        </div>
+
+        <!-- CTA Button -->
+        <div class="text-center">
+            <a href="#enrollment-form" class="inline-block bg-teal-600 text-white text-2xl font-bold px-12 py-6 rounded-xl shadow-lg hover:bg-teal-700 transform hover:-translate-y-1 transition-all duration-200">
+                Yes, I Want to Learn Stock Trading in Malayalam
+            </a>
+        </div>
+    </div>
+</section>
+    <section class="py-8 ">
         <div class="container mx-auto px-4 max-w-4xl">
             <!-- Section Header -->
             <div class="text-center mb-12">
