--- a/index.html
+++ b/index.html
@@ -778,7 +778,7 @@
         // Auto-play
         setInterval(nextSlide, 5000);
     </script>
- <section class="py-16 bg-gray-50">
+ <section class="py-16 ">
     <div class="container mx-auto px-4 max-w-5xl">
         <!-- Timer and Flash Offer Banner -->
         <div class="bg-yellow-100 border-2 border-yellow-400 rounded-lg p-4 mb-8 text-center">
@@ -863,7 +863,7 @@
 
         <!-- CTA Button -->
         <div class="text-center">
-            <a href="#enrollment-form" class="inline-block bg-teal-600 text-white text-2xl font-bold px-12 py-6 rounded-xl shadow-lg hover:bg-teal-700 transform hover:-translate-y-1 transition-all duration-200">
+            <a href="#enrollment-form" class="inline-block bg-green-600 text-white text-2xl font-bold px-12 py-6 rounded-xl shadow-lg hover:bg-teal-700 transform hover:-translate-y-1 transition-all duration-200">
                 Yes, I Want to Learn Stock Trading in Malayalam
             </a>
         </div>
