--- a/index.html
+++ b/index.html
@@ -310,13 +310,13 @@
                 </div>
 
                 <div class="max-w-7xl mx-auto grid md:grid-cols-6 gap-2 items-center mt-10">
-                    <div class="border-2 border-green-600 rounded-lg p-4  h-52 ">
+                    <div class="border-2 border-green-600 rounded-lg p-4  md:h-52 ">
                         <h2 class="text-xl font-bold text-green-600">Working Proffessionals</h2>
                         <p>
                             Looking to build a second income stream or invest smarter for long-term gains.
                         </p>
                     </div>
-                    <div class="border-2 border-green-600 rounded-lg p-4  h-52 ">
+                    <div class="border-2 border-green-600 rounded-lg p-4  md:h-52 ">
                         <h2 class="text-xl font-bold text-green-600">Doctors</h2>
                         <p>
                             Wanting to diversify investments and
@@ -324,7 +324,7 @@
                             outside of their practice.
                         </p>
                     </div>
-                    <div class="border-2 border-green-600 rounded-lg p-4  h-52 ">
+                    <div class="border-2 border-green-600 rounded-lg p-4  md:h-52 ">
                         <h2 class="text-xl font-bold text-green-600">Bankers</h2>
                         <p>
                             Interested in expanding their
@@ -333,14 +333,14 @@
                         </p>
                     </div>
 
-                    <div class="border-2 border-green-600 rounded-lg p-4  h-52 ">
+                    <div class="border-2 border-green-600 rounded-lg p-4  md:h-52 ">
                         <h2 class="text-xl font-bold text-green-600">College Students</h2>
                         <p>
                             Eager to learn about the stock market
                             early and start building wealth.
                         </p>
                     </div>
-                    <div class="border-2 border-green-600 rounded-lg p-4  h-52 ">
+                    <div class="border-2 border-green-600 rounded-lg p-4  md:h-52 ">
                         <h2 class="text-xl font-bold text-green-600">Housewives</h2>
                         <p>
                             Looking for a flexible way to contribute
@@ -348,7 +348,7 @@
                             household
                         </p>
                     </div>
-                    <div class="border-2 border-green-600 rounded-lg p-4  h-52 ">
+                    <div class="border-2 border-green-600 rounded-lg p-4  md:h-52 ">
                         <h2 class="text-xl font-bold text-green-600">Retired Individuals</h2>
                         <p>
                             Searching for ways to grow their
