--- a/index.html
+++ b/index.html
@@ -807,21 +807,21 @@
 
             <!-- Bonus 2 - Blue -->
             <div class="bg-green-50 p-6 rounded-xl shadow-md border border-blue-100">
-                <h3 class="text-xl font-semibold mb-2 text-blue-900">Personalized Trading Plan</h3>
+                <h3 class="text-xl font-semibold mb-2 text-teal-900">Personalized Trading Plan</h3>
                 <p class="text-gray-600 mb-2">Receive a customized trading plan tailored to your financial goals and risk tolerance.</p>
                 <p class="text-teal-600 font-semibold">Worth ₹2,000</p>
             </div>
 
             <!-- Bonus 3 - Purple -->
             <div class="bg-purple-50 p-6 rounded-xl shadow-md border border-purple-100">
-                <h3 class="text-xl font-semibold mb-2 text-purple-900">Exclusive Webinars</h3>
+                <h3 class="text-xl font-semibold mb-2 text-teal-900">Exclusive Webinars</h3>
                 <p class="text-gray-600 mb-2">Participate in monthly webinars featuring industry experts and gain insights into market trends.</p>
                 <p class="text-teal-600 font-semibold">Worth ₹3,000</p>
             </div>
 
             <!-- Bonus 4 - Indigo -->
             <div class="bg-indigo-50 p-6 rounded-xl shadow-md border border-indigo-100">
-                <h3 class="text-xl font-semibold mb-2 text-indigo-900">1 Year Access to Course Materials</h3>
+                <h3 class="text-xl font-semibold mb-2 text-teal-900">1 Year Access to Course Materials</h3>
                 <p class="text-gray-600 mb-2">Enjoy lifetime access to all course materials, including recorded sessions and resources.</p>
                 <p class="text-teal-600 font-semibold">Worth ₹5,000</p>
             </div>
