--- a/index.html
+++ b/index.html
@@ -129,10 +129,10 @@
             <div class="flex items-center">
                 <img src="./Trade Talks Logo white.png" alt="Trade Talks" class="h-10 w-auto">
             </div>
-            <button
+            <a href="/#contact"
                 class="bg-green-600 hover:bg-green-700 text-white font-bold px-6 py-2 rounded-full transition-colors">
                 Join Now
-            </button>
+        </a>
         </div>
     </nav>
     <!-- END: Navigation -->
@@ -181,7 +181,7 @@
 
             <!-- Form Section -->
             <div class="max-w-5xl mx-auto bg-white rounded-lg  pt-8">
-                <form class="space-y-4 grid grid-cols-1 md:grid-cols-2">
+                <form id="contact" class="space-y-4 grid grid-cols-1 md:grid-cols-2">
                     <!-- Form Title -->
                     <div class="md:mb-8 pt-10 flex md:justify-center items-center">
                         <div>
@@ -336,7 +336,6 @@
                             and trading strategies.
                         </p>
                     </div>
-
                     <div class="border-2 border-green-600 rounded-lg p-4  md:h-52 ">
                         <h2 class="text-xl font-bold text-green-600">College Students</h2>
                         <p>
@@ -379,7 +378,7 @@
                         <img src="./C0263.MP4.09_27_52_08.Still001.jpg" alt="Expert Mentorship"
                             class="w-full srcimg h-[165px] object-cover">
                         <div class="feature-content p-6">
-                            <h3 class="text-xl text-white font-bold mb-3">Expert Mentorship by Sunil Mathai & Silly</h3>
+                            <h3 class="text-xl text-white font-bold mb-3">Expert Mentorship by Sunil Mathai & Silby</h3>
                             <p class="text-white text-sm leading-relaxed">
                                 Learn from seasoned professionals with over 10 years of share trading and teaching
                                 experience. Their expertise will guide you through every step of your trading journey.
@@ -432,6 +431,67 @@
                         </div>
                     </div>
                 </div>
+
+                <!-- Live Mentor Support Card -->
+                <div class="feature-card shadow-lg">
+                    <div class="relative h-[300px]">
+                        <img src="./C0128.MP4.07_44_54_28.Still001.jpg" alt="Live Market Sessions"
+                            class="w-full h-[165px] srcimg object-cover">
+                        <div class="feature-content p-6">
+                            <h3 class="text-xl text-white font-bold mb-3">Course Completion Certificate</h3>
+                            <p class="text-white text-sm leading-relaxed">
+                                Earn a Course Completion Certificate to showcase your
+                                newly acquired skills and knowledge.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Live Mentor Support Card -->
+                <div class="feature-card shadow-lg">
+                    <div class="relative h-[300px]">
+                        <img src="./cand.jpg" alt="Live Market Sessions" class="w-full h-[165px] srcimg object-cover">
+                        <div class="feature-content p-6">
+                            <h3 class="text-xl text-white font-bold mb-3">Interactive Online Classes
+                                via Zoom</h3>
+                            <p class="text-white text-sm leading-relaxed">
+                                Experience dynamic and engaging live interactive
+                                classes designed to facilitate real-time learning.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="feature-card shadow-lg">
+                    <div class="relative h-[300px]">
+                        <img src="./_AKH5428.JPG" alt="Live Market Sessions"
+                            class="w-full h-[165px] srcimg object-cover">
+                        <div class="feature-content p-6">
+                            <h3 class="text-xl text-white font-bold mb-3">Recorded Sessions & Educational Content</h3>
+
+                            <p class="text-white text-sm leading-relaxed">
+                                Access recorded sessions and a wealth of educational
+                                content for flexible, self-paced learning.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="feature-card shadow-lg">
+                    <div class="relative h-[300px]">
+                        <img src="./C0202.MP4.09_15_13_42.Still001.jpg" alt="Live Market Sessions"
+                            class="w-full h-[165px] srcimg object-cover">
+                        <div class="feature-content p-6">
+                            <h3 class="text-xl text-white font-bold mb-3">Access to 3000+ Traders Community</h3>
+
+                            <p class="text-white text-sm leading-relaxed">
+                                Joinasupportivecommunitywithclassesand
+                                channelsdedicatedtoyourgrowthasatrader.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+
             </div>
         </div>
     </section>
@@ -578,7 +638,7 @@
                                 </svg>
                                 <p class="text-lg text-gray-700 italic">
                                     "I was a complete beginner when I joined Trade Talks Kerala. The mentorship from
-                                    Sunil and Silly helped me understand the stock market in ways I never thought
+                                    Sunil and Silby helped me understand the stock market in ways I never thought
                                     possible. I've started generating consistent profits, aiming for that 10-15% return
                                     each month!"
                                 </p>
@@ -982,7 +1042,7 @@
                     </button>
                     <div class="faq-answer hidden px-6 pb-4">
                         <p class="text-gray-600">No prior knowledge of the stock market is necessary. Our expert
-                            instructors, led by Sunil Mathai and Silly, will guide you from the basics to advanced
+                            instructors, led by Sunil Mathai and Silby, will guide you from the basics to advanced
                             trading techniques, ensuring you gain practical and theoretical knowledge.</p>
                     </div>
                 </div>
@@ -1119,9 +1179,9 @@
     </footer>
     <!-- END: Footer -->
     <!-- START: Floating Contact Buttons -->
-    <div class="float-buttons fixed bottom-6 right-6 flex flex-col gap-4">
+    <div class="float-buttons fixed bottom-6 right-4 flex  items-end flex-col gap-4">
         <!-- WhatsApp -->
-        <a href="https://wa.me/+919072722294" target="_blank" class="contact-button relative group">
+        <a href="https://wa.me/+919072722294" target="_blank" class="contact-button relative group w-12">
             <div
                 class="tooltip absolute right-full mr-2 bg-black text-white px-2 py-1 rounded text-sm whitespace-nowrap top-1/2 -translate-y-1/2">
                 Message on WhatsApp
@@ -1137,7 +1197,7 @@
         </a>
 
         <!-- Phone -->
-        <a href="tel:+919072722294" class="contact-button relative group">
+        <a href="tel:+919072722294" class="contact-button relative group w-12">
             <div
                 class="tooltip absolute right-full mr-2 bg-black text-white px-2 py-1 rounded text-sm whitespace-nowrap top-1/2 -translate-y-1/2">
                 Call Us
@@ -1153,7 +1213,7 @@
         </a>
 
         <!-- Email -->
-        <a href="mailto:info@tradetalks.co.in" class="contact-button relative group">
+        <a href="mailto:info@tradetalks.co.in" class="contact-button relative group w-12">
             <div
                 class="tooltip absolute right-full mr-2 bg-black text-white px-2 py-1 rounded text-sm whitespace-nowrap top-1/2 -translate-y-1/2">
                 Email Us
@@ -1167,6 +1227,14 @@
                 </svg>
             </div>
         </a>
+        <a href="/#contact" class="contact-button relative group">
+           
+            <div
+                class="bg-green-500 px-8    text-white p-3 rounded-full shadow-lg hover:bg-green-600 flex items-center justify-center">
+                Join Now
+            </div>
+        </a>
+
     </div>
     <!-- END: Floating Contact Buttons -->
     <!-- START: Video Modal -->
@@ -1221,7 +1289,7 @@
         });
     </script>
     <!-- Add this JavaScript at the end of your body tag -->
-   
+
     <script src="animation.js"></script>
 </body>
 
