--- a/index.html
+++ b/index.html
@@ -369,11 +369,11 @@
     <p class="text-center text-gray-500 mt-2 p-4 slide-in-left">Discover the unmatched advantages of joining Trade Talks
         Kerala's No.1
         Share Trading Academy.</p>
-    <section class=" px-4 slide-in-left">
+    <section class=" px-4 ">
         <div class="container mx-auto max-w-7xl">
             <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
                 <!-- Expert Mentorship Card -->
-                <div class="feature-card shadow-lg">
+                <div class="feature-card slide-in-left shadow-lg">
                     <div class="relative h-[300px]">
                         <img src="./C0263.MP4.09_27_52_08.Still001.jpg" alt="Expert Mentorship"
                             class="w-full srcimg h-[165px] object-cover">
@@ -388,7 +388,7 @@
                 </div>
 
                 <!-- Post Market Sessions Card -->
-                <div class="feature-card shadow-lg">
+                <div class="feature-card slide-in-left shadow-lg">
                     <div class="relative h-[300px]">
                         <img src="./White copy.jpg" alt="Post Market Sessions"
                             class="w-full h-[165px] srcimg object-cover">
@@ -403,7 +403,7 @@
                 </div>
 
                 <!-- Live Market Sessions Card -->
-                <div class="feature-card shadow-lg">
+                <div class="feature-card slide-in-left shadow-lg">
                     <div class="relative h-[300px]">
                         <img src="./DSC01313.jpg" alt="Live Market Sessions"
                             class="w-full h-[165px] srcimg object-cover">
@@ -418,7 +418,7 @@
                 </div>
 
                 <!-- Live Mentor Support Card -->
-                <div class="feature-card shadow-lg">
+                <div class="feature-card slide-in-left shadow-lg">
                     <div class="relative h-[300px]">
                         <img src="./DSC02000.jpg" alt="Live Market Sessions"
                             class="w-full h-[165px] srcimg object-cover">
@@ -433,7 +433,7 @@
                 </div>
 
                 <!-- Live Mentor Support Card -->
-                <div class="feature-card shadow-lg">
+                <div class="feature-card slide-in-left shadow-lg">
                     <div class="relative h-[300px]">
                         <img src="./C0128.MP4.07_44_54_28.Still001.jpg" alt="Live Market Sessions"
                             class="w-full h-[165px] srcimg object-cover">
@@ -448,7 +448,7 @@
                 </div>
 
                 <!-- Live Mentor Support Card -->
-                <div class="feature-card shadow-lg">
+                <div class="feature-card slide-in-left shadow-lg">
                     <div class="relative h-[300px]">
                         <img src="./cand.jpg" alt="Live Market Sessions" class="w-full h-[165px] srcimg object-cover">
                         <div class="feature-content p-6">
@@ -462,7 +462,7 @@
                     </div>
                 </div>
 
-                <div class="feature-card shadow-lg">
+                <div class="feature-card slide-in-left shadow-lg">
                     <div class="relative h-[300px]">
                         <img src="./_AKH5428.JPG" alt="Live Market Sessions"
                             class="w-full h-[165px] srcimg object-cover">
@@ -477,7 +477,7 @@
                     </div>
                 </div>
 
-                <div class="feature-card shadow-lg">
+                <div class="feature-card slide-in-left shadow-lg">
                     <div class="relative h-[300px]">
                         <img src="./C0202.MP4.09_15_13_42.Still001.jpg" alt="Live Market Sessions"
                             class="w-full h-[165px] srcimg object-cover">
@@ -497,18 +497,17 @@
     </section>
     <!-- END: Why Choose Us Section -->
     <!-- START: Meet Our Mentors Section -->
-    <section class="py-16 px-4 scale-up">
+    <section class="py-16 px-4 ">
         <div class="container mx-auto max-w-7xl">
             <!-- Section Header -->
             <div class="mb-5 ">
-                <h2 class="text-4xl md:text-5xl font-bold">
-                    Meet Our
-                    Mentors
+                <h2 class="text-4xl md:text-5xl font-bold ">
+                    Meet Our Mentors
                 </h2>
             </div>
 
             <!-- Mentor Profile -->
-            <div class="grid md:grid-cols-2 gap-8 items-start">
+            <div class="grid md:grid-cols-2 gap-8 items-start scale-up ">
                 <!-- Image Column -->
                 <div class="relative">
                     <div class="rounded-3xl overflow-hidden shadow-xl">
@@ -558,7 +557,7 @@
                 </div>
             </div>
 
-            <div class="grid md:grid-cols-2 gap-8 items-start mt-12">
+            <div class="grid md:grid-cols-2 gap-8 items-start scale-up mt-12">
                 <!-- Image Column -->
                 <div class="relative">
                     <div class="rounded-3xl overflow-hidden shadow-xl">
