--- a/index.html
+++ b/index.html
@@ -485,8 +485,8 @@
                             <h3 class="text-xl text-white font-bold mb-3">Access to 3000+ Traders Community</h3>
 
                             <p class="text-white text-sm leading-relaxed">
-                                Joinasupportivecommunitywithclassesand
-                                channelsdedicatedtoyourgrowthasatrader.
+                                Join a supportive community with classes and
+                                channels dedicated to your growth as a trader.
                             </p>
                         </div>
                     </div>
