--- a/index.html
+++ b/index.html
@@ -950,7 +950,7 @@
             <!-- CTA Button -->
             <div class="text-center">
                 <a href="#enrollment-form"
-                    class="inline-block bg-green-600 text-white text-2xl font-bold px-12 py-6 rounded-xl shadow-lg hover:bg-teal-700 transform hover:-translate-y-1 transition-all duration-200">
+                    class="inline-block bg-green-600 text-white md:text-2xl font-bold px-12 py-6 rounded-xl shadow-lg hover:bg-teal-700 transform hover:-translate-y-1 transition-all duration-200">
                     Yes, I Want to Learn Stock Trading in Malayalam
                 </a>
             </div>
