--- a/index.html
+++ b/index.html
@@ -561,7 +561,7 @@
                 <!-- Image Column -->
                 <div class="relative">
                     <div class="rounded-3xl overflow-hidden shadow-xl">
-                        <img src="./sunilmathai.jpg" alt="Sunil Mathai" class="w-full f-full object-cover"
+                        <img src="./silby.jpg" alt="Sunil Mathai" class="w-full f-full object-cover"
                             style="height: 60vh;">
                     </div>
                 </div>
