navbar link logo

--- a/index.html
+++ b/index.html
@@ -220,9 +220,9 @@
     <!-- START: Navigation -->
     <nav class="bg-black shadow fixed w-full z-50  fade-in">
         <div class="container mx-auto px-4 py-3 flex justify-between items-center">
-            <div class="flex items-center">
+            <a href="/" class="flex items-center">
                 <img src="./Trade Talks Logo white.png" alt="Trade Talks" class="h-10 w-auto">
-            </div>
+            </a>
             <a href="/#contact"
                 class="bg-green-600 hover:bg-green-700 text-white font-bold px-6 py-2 rounded-full transition-colors">
                 Join Now
