--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
             line-height: 1.6;
         }
 
- 
+
 
         .benefit-card {
             background: white;
@@ -203,7 +203,7 @@
                 font-size: 2rem;
             }
 
-           
+
         }
     </style>
 </head>
@@ -1520,7 +1520,7 @@
         </a>
 
         <!-- Email -->
-        <a href="mailto:info@tradetalks.co.in" class="contact-button relative group w-12">
+        <a href="mailto:info@tradetalks.co.in" class="contact-button relative group w-12 mb-12 md:mb-8">
             <div
                 class="tooltip absolute right-full mr-2 bg-black text-white px-2 py-1 rounded text-sm whitespace-nowrap top-1/2 -translate-y-1/2">
                 Email Us
@@ -1534,15 +1534,13 @@
                 </svg>
             </div>
         </a>
-        <a href="/#contact" class="contact-button relative group">
+        
 
-            <div
-                class="bg-green-500 px-8    text-white p-3 rounded-full shadow-lg hover:bg-green-600 flex items-center justify-center">
-                Join Now
-            </div>
-        </a>
 
     </div>
+    <a href="/#contact" class="bg-green-600 w-full rounded-full text-white text-xl md:text-4xl fixed bottom-3 right-0 left-0 p-2 max-w-7xl mx-auto text-center">
+        Yes I want to achieve Financial Freedom
+    </a>
     <!-- END: Floating Contact Buttons -->
     <!-- START: Video Modal -->
     <div id="videoModal" class="fixed inset-0 bg-black bg-black flex items-center justify-center z-50 hidden">
