--- a/index.html
+++ b/index.html
@@ -339,7 +339,7 @@
                                                 d="M10 18a8 8 0 100-16 8 8 0 000 16zm3.707-9.293a1 1 0 00-1.414-1.414L9 10.586 7.707 9.293a1 1 0 00-1.414 1.414l2 2a1 1 0 001.414 0l4-4z"
                                                 clip-rule="evenodd" />
                                         </svg>
-                                        <span>Malayalam Medium</span>
+                                        <span>Malayalam Stock Trading Class</span>
                                     </div>
                                 </div>
                             </div>
@@ -364,8 +364,8 @@
                     <!-- Form Title -->
                     <div class="md:mb-8 pt-10 flex md:justify-center items-center">
                         <div>
-                            <h2 class="text-5xl font-bold text-gray-800">Fill This Form</h2>
-                            <p class="text-xl text-gray-800">to Join With Us</p>
+                            <h2 class="text-5xl font-bold text-gray-800">Admissions Open</h2>
+                            <p class="text-xl text-gray-800">Register Now to get a call from our academic counsellor</p>
                         </div>
                     </div>
                     <div class="space-y-4">
@@ -402,7 +402,7 @@
                         <!-- Submit Button -->
                         <button type="submit"
                             class="w-full bg-green-600 hover:bg-teal-700 text-white py-3 px-6 rounded-full text-lg transition-colors">
-                            Yes, I want to Learn Share Trading
+                            Yes, I want to Learn Stock Trading
                         </button>
                     </div>
                 </form>
@@ -569,6 +569,12 @@
                         </p>
                     </div>
                     <div class="border-2 border-green-600 rounded-lg p-4  md:h-36 ">
+                        <h2 class="text-xl font-bold text-green-600">Freelancers</h2>
+                        <p>
+                            Wanting to supplement their freelance income by learning valuable new skill
+                        </p>
+                    </div>
+                    <div class="border-2 border-green-600 rounded-lg p-4  md:h-36 ">
                         <h2 class="text-xl font-bold text-green-600">Government Employees</h2>
                         <p>
                             Looking for a stable and profitable way to invest their earnings.
@@ -580,6 +586,17 @@
         </div>
     </section>
     <!-- END: Mentors Section -->
+    <div class="mt-5 mb-12 p-3 max-w-7xl mx-auto text-center">
+        <p class="mb-5">
+            Anyone with the passion to learn and succeed in the stock market can join this course and start their
+            journey to
+            financial freedom
+        </p>
+        <a href="/#contact" class="text-center bg-green-600 p-3 rounded-full md:text-3xl text-2xl text-white">
+            Yes I want to achieve Financial Freedom
+        </a>
+
+    </div>
     <!-- START: Why Choose Us Section -->
     <h2 class="text-center md:text-7xl text-4xl font-bold slide-in-left">Why choose us?</h2>
     <p class="text-center text-gray-500 mt-2 p-4 slide-in-left">Discover the unmatched advantages of joining Trade Talks
@@ -1534,13 +1551,11 @@
                 </svg>
             </div>
         </a>
-        
+
 
 
     </div>
-    <a href="/#contact" class="bg-green-600 w-full rounded-full text-white text-xl md:text-4xl fixed bottom-3 right-0 left-0 p-2 max-w-7xl mx-auto text-center">
-        Yes I want to achieve Financial Freedom
-    </a>
+
     <!-- END: Floating Contact Buttons -->
     <!-- START: Video Modal -->
     <div id="videoModal" class="fixed inset-0 bg-black bg-black flex items-center justify-center z-50 hidden">
