--- a/index.html
+++ b/index.html
@@ -592,7 +592,7 @@
             journey to
             financial freedom
         </p>
-        <a href="/#contact" class="text-center bg-green-600 p-3 rounded-full md:text-3xl text-2xl text-white">
+        <a href="/#contact" class="text-center bg-green-600 p-3 py-4 rounded-full md:text-3xl text-2xl text-white">
             Yes I want to achieve Financial Freedom
         </a>
 
@@ -673,8 +673,7 @@
                         <div class="feature-content p-6">
                             <h3 class="text-xl text-white font-bold mb-3">Course Completion Certificate</h3>
                             <p class="text-white text-sm leading-relaxed">
-                                Earn a Course Completion Certificate to showcase your
-                                newly acquired skills and knowledge.
+                                Earn a prestigious certificate upon course completion to showcase your skills.
                             </p>
                         </div>
                     </div>
@@ -1537,7 +1536,7 @@
         </a>
 
         <!-- Email -->
-        <a href="mailto:info@tradetalks.co.in" class="contact-button relative group w-12 mb-12 md:mb-8">
+        <a href="mailto:info@tradetalks.co.in" class="contact-button relative group w-12 ">
             <div
                 class="tooltip absolute right-full mr-2 bg-black text-white px-2 py-1 rounded text-sm whitespace-nowrap top-1/2 -translate-y-1/2">
                 Email Us
