--- a/index.html
+++ b/index.html
@@ -1909,11 +1909,21 @@
 
             <!-- Bottom Bar -->
             <div class="py-4 border-t border-gray-200">
-                <div class="flex flex-col md:flex-row justify-between items-center text-sm text-gray-300">
-                    <p>&copy; 2025 Trade Talks. All rights reserved.</p>
-                    <div class="flex space-x-4 mt-2 md:mt-0">
-                        <a href="#" class="hover:text-teal-600 transition-colors">Privacy Policy</a>
-                        <a href="#" class="hover:text-teal-600 transition-colors">Terms of Service</a>
+                <div class="flex flex-col space-y-4 text-sm text-gray-300">
+                    <!-- Terms and Conditions Section -->
+                    <div class="text-center md:text-left">
+                        <h4 class="font-semibold mb-2 text-gray-400">Terms and Conditions</h4>
+                        <p class="mb-2">Please refer to our website for detailed Terms and Conditions regarding course enrollment, refund policies, and program completion requirements.</p>
+                        <a href="https://tradetalks.co.in/stock-trading-course-kerala" class="text-teal-500 hover:text-teal-400 transition-colors">Visit our website for full details →</a>
+                    </div>
+            
+                    <!-- Copyright and Links -->
+                    <div class="flex flex-col md:flex-row justify-between items-center">
+                        <p>&copy; 2025 Trade Talks. All rights reserved.</p>
+                        <div class="flex space-x-4 mt-2 md:mt-0">
+                            <a href="#" class="hover:text-teal-600 transition-colors">Privacy Policy</a>
+                            <a href="#" class="hover:text-teal-600 transition-colors">Terms of Service</a>
+                        </div>
                     </div>
                 </div>
             </div>
